--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
   <body>
     <header class="header">
       <div class="overlay has-fade"></div>
-      <nav class="container flex flex-space-between flex-centered-items">
+      <nav
+        class="
+          container container--padding-all
+          flex flex-space-between flex-centered-items
+        "
+      >
         <a href="/" class="header__logo">
           <img src="./images//logo.svg" alt="Easybank logo" />
         </a>
@@ -54,15 +59,17 @@
     </header>
 
     <section class="hero">
-      <div class="hero__image"></div>
-      <div class="hero__text">
-        <h1>Next generation digital banking</h1>
-        <p>
-          Take your financial life online. Your Easybank account will be a
-          one-stop-shop for spending, saving, budgeting, investing, and much
-          more.
-        </p>
-        <button type="button" class="hero__centered">Request Invite</button>
+      <div class="container">
+        <div class="hero__image"></div>
+        <div class="hero__text container--padding-all">
+          <h1>Next generation digital banking</h1>
+          <p>
+            Take your financial life online. Your Easybank account will be a
+            one-stop-shop for spending, saving, budgeting, investing, and much
+            more.
+          </p>
+          <button type="button" class="hero__centered">Request Invite</button>
+        </div>
       </div>
     </section>
 
