changed image paths to fix GH not showing them

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="feature__grid">
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="/images/icon-online.svg" alt="Hand with cards" />
+              <img src="./images/icon-online.svg" alt="Hand with cards" />
             </div>
             <div class="feature__title">Online Banking</div>
             <div class="feature__description">
@@ -98,7 +98,7 @@
           <div class="feature__item">
             <div class="feature__icon">
               <img
-                src="/images/icon-budgeting.svg"
+                src="./images/icon-budgeting.svg"
                 alt="Phone with dashboard"
               />
             </div>
@@ -112,7 +112,7 @@
           <div class="feature__item">
             <div class="feature__icon">
               <img
-                src="/images/icon-onboarding.svg"
+                src="./images/icon-onboarding.svg"
                 alt="Person showing things"
               />
             </div>
@@ -126,7 +126,7 @@
           <div class="feature__item">
             <div class="feature__icon">
               <img
-                src="/images/icon-api.svg"
+                src="./images/icon-api.svg"
                 alt="Processor at the crossroads"
               />
             </div>
@@ -163,7 +163,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-restaurant.jpg')"
+              style="background-image: url('./images/image-restaurant.jpg')"
             ></div>
             <div class="article__text">
               <div class="article__author">By Wilson Hutton</div>
@@ -179,7 +179,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-plane.jpg')"
+              style="background-image: url('./images/image-plane.jpg')"
             ></div>
             <div class="article__text">
               <div class="article__author">By Wilson Hutton</div>
@@ -195,7 +195,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-confetti.jpg')"
+              style="background-image: url('./images/image-confetti.jpg')"
             ></div>
             <div class="article__text">
               <div class="article__author">By Claire Robinson</div>
@@ -216,7 +216,7 @@
     <footer class="footer">
       <div class="container">
         <a class="footer__logo" href="#">
-          <img src="/images/logo-light.svg" />
+          <img src="./images/logo-light.svg" />
         </a>
 
         <div class="footer__social">
