--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         "
       >
         <a href="/" class="header__logo">
-          <img src="./images//logo.svg" alt="Easybank logo" />
+          <img src="./images/logo.svg" alt="Easybank logo" />
         </a>
         <a href="#" id="btnHamburger" class="header__toggle hide-for-desktop">
           <span></span>
@@ -147,7 +147,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-currency.jpg')"
+              style="background-image: url('./images/image-currency.jpg')"
             ></div>
             <div class="article__text">
               <div class="article__author">By Claire Robinson</div>
